# Rust3D

./: Cargo.toml  README.md  lib.rs  main.rs  render_tools.rs  rust3d.rs  virtual_space.rs
Algorithm Resource/: Anti_aliasing_study.gh  MatrixRotation.gh  PerspectiveProjection.gh  ProjectedLength.gh  RayCasting.gh  RayTracePrimitveShaderStudy.gh  Readme.txt  combined_matrix.gh
benches/: benchmark_part.rs
geometry/: rust3d.rs
src/: MatrixRotation.gh  buffer_frames.rs  cad_operations.rs  display_pipe_line.rs  fonts_txt.rs  lib.rs  main.rs  main_backv2.rs  main_one_file_version_old.rs  models_3d.rs  render_tools.rs  rust3d.rs  rust_windows.rs  virtual_space.rs
src/runtimes_mains/: main_basisworld_with_fadinggimball.rs  main_mesh_orientation.rs
