[package]
name = "rust3d"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
dashmap = "6.1.0"
minifb = "0.28.0"
rayon = "1.10.0"
serde = {version="1.0.217", features=["derive"]}
serde_json = "1.0.138"
tobj = "4.0.3"

[dev-dependencies]
criterion = "0.5.1"

[lib]
path="src/lib.rs"

[[bin]]
name="alpha_version_development"
path="src/main.rs"

[[bench]]
name = "benchmark_part"
harness = false
